--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: mattrobineau/jekyll-now
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/matthieurobineau
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
