--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ footer-links:
   instagram:
   linkedin: https://www.linkedin.com/in/matthieurobineau
   pinterest:
-  rss: # just type anything here for a working RSS icon
+  rss: feed.xml # just type anything here for a working RSS icon
   twitter:
   stackoverflow: "users/4298/matt-r"
   youtube: # channel/<your_long_string> or user/<user-name>
