--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Matt Robineau
 
 # Short bio or description (displayed in the header)
-description: Matthieu Robineau is a .Net developer.
+description: c# developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar:
